stm32cube/stm32l1xx/README
STM32CubeL1
###########

Origin:
   ST Microelectronics
   http://www.st.com/en/embedded-software/stm32cubel1.html

Status:
   version 1.9.0

Purpose:
   ST Microelectronics official MCU package for STM32L1 series.

Description:
   This package is an extract of official STM32CubeL1 package written by ST Microelectronics.
   It is composed of STM32Cube hardware abstraction layer (HAL) and low layer (LL) plus a set
   of CMSIS headers files, one for each SoC in STM32L1 series.

Dependencies:
    None.

URL:
   http://www.st.com/en/embedded-software/stm32cubel1.html

commit:
   version 1.9.0

Maintained-by:
   External

License:
   BSD-3-Clause

License Link:
   https://opensource.org/licenses/BSD-3-Clause

Patch List:

    *Extend public SetFlashLatency API to all families
     The LL_SetFlashLatency public API is now defined for families
     beyond G4, L4 and L5. The private function has been made public.
    Impacted files:
     drivers/include/stm32l1xx_ll_utils.h
     drivers/src/stm32l1xx_ll_utils.c
    ST Bug tracker ID: 76126

    *ext/hal/st/stm32cube/stm32l1xx: rename SVC_IRQn -> SVCall_IRQn

     SVCall_IRQn is used as enum value for SV Call Interrupt for Cortex-M
     based SoCs for which CPU_CORTEX_M_HAS_BASEPRI=y. However stm32cube
     for stm32l1xx uses SVC_IRQn enum value for this purpose.
     This leads to this error:

       arch/arm/include/cortex_m/exc.h:101:19: error: 'SVCall_IRQn'
         undeclared (first use in this function); did you mean 'SVC_IRQn'?

         NVIC_SetPriority(SVCall_IRQn, _EXC_SVC_PRIO);
                          ^~~~~~~~~~~
                          SVC_IRQn

     NB: ext/hal/st/stm32cube/stm32l1xx/soc/stm32l151xb.h file was already
     fixed in 9f8260457b86 ('ext: hal: st: stm32cube: Add HAL for
     the STM32L1x series').
     Impacted files:
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l100xb.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l100xba.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l100xc.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l151xba.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l151xc.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l151xca.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l151xd.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l151xdx.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l151xe.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l152xb.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l152xba.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l152xc.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l152xca.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l152xd.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l152xdx.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l152xe.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l162xc.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l162xca.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l162xd.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l162xdx.h
      ext/hal/st/stm32cube/stm32l1xx/soc/stm32l162xe.h
     ST Bug tracker ID: 66029

   *Disable i2c HAL
     Due to conflict with zephyr i2c.h (I2C_SPEED_STANDARD and I2C_SPEED_FAST
     redefinition), deactivate STM32Cube I2C HAL. This raises no issue since
     LL API is currently used for stm32 I2C driver.
    Impacted files:
     drivers/include/stm32l1xx_hal_conf.h
    ST Bug tracker ID: NA. Not a stm32cube issue

   *stm32l151xb: add missing SPI_CR2_FRF definitions

    The higher density parts correctly included the SPI_CR2_FRF definitions,
    but these were missing for the low/medium density parts.  Without these
    definitions, the zephyr SPI driver cannot be used on these parts.
    ST Bug tracker ID: 73643

    *Fix warnings for extraneous parentheses
      Using clang 9.0.0, if((sysclk_source == RCC_CFGR_SWS_MSI) )
      generates warnings.  Remove the extra parentheses
     Impacted files:
      drivers/src/stm32l1xx_hal_rcc.c
     ST Bug tracker ID: 80902
